# watchpix

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install.sh  release.sh
spec/: watchpix_spec.md
src/: index.rs  main.rs  page.rs  scanner.rs  server.rs  types.rs  watcher.rs
