[package]
name = "watchpix"
version = "0.1.0"
edition = "2021"
description = "A live-reloading image gallery server for remote and headless machines"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
